cart logic progressed

--- a/revolut-redux-frontend/src/CSS/Cart.css
+++ b/revolut-redux-frontend/src/CSS/Cart.css
@@ -20,5 +20,10 @@ button {
     cursor: not-allowed;
   }
 
-
-  
+.cartPage {
+  display: flex !important;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2%;
+}
