--- a/revolut-redux-frontend/src/routes/navigation/Navigation.css
+++ b/revolut-redux-frontend/src/routes/navigation/Navigation.css
@@ -2,7 +2,7 @@
     width: 90%;
     margin:3% auto;
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: row wrap;
     justify-content: center;
     align-items: center;
  }
@@ -16,6 +16,7 @@
 }
 
 .navigation-button {
+    color: #000;
     cursor: pointer;
     padding: 10px;
     margin: 10px;
